spacing issue fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,7 +315,7 @@ header img {
 .search-block .item h6 {
 	font-weight: 600;
 	color: #22B1C3 !important;
-	font-size: 14px;
+	font-size: 13px;
 }
 
 .search-block .item p {
@@ -332,7 +332,7 @@ header img {
 }
 
 .search-block .item .card {
-	min-height: 250px;
+	min-height: 280px;
 }
 
 .search-engine h5 {
@@ -512,7 +512,7 @@ footer p {
 }
 
 .faq-section .accordion .card-body {
-	padding: 20px 25px;
+	padding: 20px 25px 15px;
 	font-size: 16px;
 }
 
@@ -555,6 +555,7 @@ footer p {
 	font-weight: 600;
 	color: #D17D34;
 	margin-right: 15px;
+	    margin-top: -5px;
 }
 
 
